25-Feb-2016 Fixes #158. C.ProceduralHeaderFile does not write a header inclusion guard if the override to GuardString returns null.

24-Feb-2016 Fixes #157. Xcode custom shell scripts now fail the build if any commands run return a non-zero exit code. This uses 'set -e', which bash will exit immediately if any command executed fails.

24-Feb-2016 Fixes #156. Publisher.Collation exposes a read-only property, InitialReference, which is set to the first collated file, that is used as a reference point for all future objects to be collated. This information is useful to IDE project generation.

24-Feb-2016 Fixes #155. Scanning for #includes in C source files now implicitly searches the same directory as the source file for any headers. Since the compiler does not need that path explicitly added to the header search paths in order to find sibling headers, it is a valid path to scan for them.

24-Feb-2016 Fixes #154. Scanning for #includes in C source files no longer assumes a space space after #include. Zero or more whitespace characters are now accepted.

24-Feb-2016 Added some documentation for macros added to Core assembly objects.

24-Feb-2016 Issue #153. If a module is created with a parent (i.e. it's a child of a collection), then that module now has access to two new TokenizedString macros: parentmodulename, encapsulatedparentmodulename. The former is the 'modulename' macro of the parent. The latter is the 'modulename' macro of the parent's encapsulating module. These can be identical, if the parent is a referenced module. These macros are useful for path generation for procedurally generated source, in order to generate a unique path.

23-Feb-2016 Issue #122. Modifications to XcodeBuilder to generate a 'utility' project for cases of collating a prebuilt file. Xcode projects don't have an analogous target type to VisualStudio's utility, so a static library with no source files is used.
